Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jan-2010 Andrew Eddie
 ^ Accepted [#19268] Refactoring mod_popular in the BackEnd.
 ^ Added support for layout and modal forms in JControllerForm::edit method.

04-Jan-2010 Andrew Eddie
 ^ Applied [#19231] JFormFieldList and onchange behavior.
 ^ Applied [#19143] Loading data into specified objects via database layer.
 ^ Applied [#17818] Refactoring administrator/com_massmail

03-Jan-2010 Hannes Papenberg
^ Deprecated JSimpleXML - Due to time restraints, this does unfortunately
 not mean that we are removing it from use in core code in 1.6 yet.
- Removed JElementAssetgroups JParameter Element. This is a leftover from earlier ACL tests.
^ Set a default date format for JFormFieldCalendar
# Fixed JElementComponentLayouts. Its now using the new #__template_styles table
 
02-Jan-2010 Ron Severdia
# Fixed bug in CSS for ACL, general CSS cleanup & reformat
# Visual cleanup on borders and login page

01-Jan-2010 Mark Dexter
# Fix bug where article global parameters were not showing 

29-Dec-2009 Mark Dexter
# Add correct initial Article parameters in joomla.sql
+ Partial implementation of Category List Layout
^ Standarize CSS class names in com_content - thanks Andrea Tarr
# Fixes in user modules - thanks Elin Waring
^ Improvements to Contact layout - thanks Elin Waring
# Fix but in mod_menu when there is no Itemid. Use default if no active.
# Fix PHP warning messages in New User Groups and new Access Levels.

29-Dec-2009 Hannes Papenberg
 # Fixed reference bug in JCategories
 # Fixed UTF-8 bug in dropdown selects
 # Fixed cosmetic bug in includes/router.php
 # refactored TinyMCE - thanks Jean-Marie
 # fixed SimplePie library - thanks Jean-Marie
 # improved frontend article editing - thanks Jean-Marie
 # fixed reference bug and spelling mistake in com_plugins
