@@ -41,8 +41,8 @@ defined('_JEXEC') or die;
 				<td class="center">
 					<?php /* $link = 'index.php?option=com_modules&client=0&task=edit&cid[]='. $module->id.'&tmpl=component&layout=modal' ; */ ?>
 					<?php /* $link = 'index.php?option=com_modules&client=0&task=edit&cid[]='. $module->id.'&tmpl=component&view=module&layout=modal' ; */ ?>
-					<?php $link = 'index.php?option=com_modules&client_id=0&task=edit&id='. $module->id.'&tmpl=component&view=module&layout=modal' ; ?>
-					<a class="modal" title="<?php echo JText::_('Edit'); ?>" href="<?php echo $link;?>" rel="{handler: 'iframe', size: {x: 500, y: 506}}">
+					<?php $link = 'index.php?option=com_modules&client_id=0&task=module.edit&id='. $module->id.'&tmpl=component&view=module&layout=modal' ; ?>
+					<a class="modal" href="<?php echo $link;?>" rel="{handler: 'iframe', size: {x: 800, y: 450}}">
 						<?php echo JText::_('Edit_module_settings');?></a>
 				</td>
 			</tr>
